<resources>
    <string name="app_name">Contact Book</string>
    <string name="contact_image">Contact image</string>
    <string name="contact_name">Contact name</string>
    <string name="contact_phone_number">Contact phone number</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_number_2">Phone number 2</string>
    <string name="e_mail">E-mail</string>
    <string name="e_mail_2">E-mail 2</string>
    <string name="description">Description</string>
    <string name="btn_add_phone_num">Add</string>
    <string name="btn_add_email">Аdd</string>
</resources>
